--- a/austin-journal.html
+++ b/austin-journal.html
@@ -10,32 +10,29 @@
   <h1>Austin's Epicodus Journal</h1>
   <h3>Week 1 Questions & Answers</h3>
   <ul>
-    <li>Why did you make the decision to enroll in a coding bootcamp? What are you aiming to achieve by completing 27
-      weeks of technical training?</li>
-    <p>I have considered a career in programming off and on for several years now, one of my best friends went through
-      the Epicodus program, and four years removed is very succesful. There were many ups and downs in his journey the
-      past four years, but one thing he does not regret in his life is going to a code school. I'm hoping to feel the
+    <li>Why did you make the decision to enroll in a coding bootcamp? What are you aiming to achieve by completing 27 weeks of technical training?</li>
+    <p>I have considered a career in programming off and on for several years now, one of my best friends went through the Epicodus program, and four years removed is very succesful. There were many ups and downs in his journey the past four years, but one thing he does not regret in his life is going to a code school. I'm hoping to feel the
       same way in four years.</p>
     <li>Do you already have specific goals for yourself in mind? If not, can you think of any now?</li>
-    <p>I have an internship lined up after the intership that epicodus provides us, and my short term goal is to get
-      hired after my intership is up. I would love to land a junior developer job within a year of graduating from
-      epicodus and a senior developer job within 5 years.</p>
+    <p>I have an internship lined up after the intership that epicodus provides us, and my short term goal is to get hired after my intership is up. I would love to land a junior developer job within a year of graduating from epicodus and a senior developer job within 5 years.</p>
   </ul>
   <h3>Week 2 Questions & Answers</h3>
   <ul>
-    <li>Think about asking for help in the classroom. Are there times when it's easier or harder for you to ask for
-      assistance from a peer? What about a teacher?</li>
-    <p>I love asking for help in this environment, sometimes I feel like I ask for help too quickly when the answer
-      might be a quick google search and some elbow grease away.</p>
+    <li>Think about asking for help in the classroom. Are there times when it's easier or harder for you to ask for assistance from a peer? What about a teacher?</li>
+    <p>I love asking for help in this environment, sometimes I feel like I ask for help too quickly when the answer might be a quick google search and some elbow grease away.</p>
     <li>What factors make it harder to ask for help? Why do these stand in your way?</li>
-    <p>I feel the only time I have a hard time asking for help is when my ego gets in the way, which is not beneficial
-      for anyone.</p>
-    <li>What can you do to minimize or eliminate these factors? In what ways could you practice sharing your problem
-      solving process throughout the week?</li>
-    <p>Once I learn something, it is very beneficial for me to teach it to someone else a few times. It really helps
-      reinforce the information into my head. Plus no matter how time consuming it is, I really benefit from just
-      coding. coding. coding. More time spent doing it, the better I get. My problem solving process is still under
-      progress, I am trying to obtain some more patience, and building the skill of a google search.</p>
+    <p>I feel the only time I have a hard time asking for help is when my ego gets in the way, which is not beneficial for anyone.</p>
+    <li>What can you do to minimize or eliminate these factors? In what ways could you practice sharing your problem solving process throughout the week?</li>
+    <p>Once I learn something, it is very beneficial for me to teach it to someone else a few times. It really helps reinforce the information into my head. Plus no matter how time consuming it is, I really benefit from just coding. coding. coding. More time spent doing it, the better I get. My problem solving process is still under progress, I am trying to obtain some more patience, and building the skill of a google search.</p>
+  </ul>
+  <h3>Week 4 Questions & Answers</h3>
+  <ul>
+    <li>When, like all developers, you encounter a problem you can't immediately solve, what's your internal reaction? Is it along the lines of "Oh, I'm not smart enough for this.", more like "Okay, I just need to learn more.", or something else?</li>
+    <p>It is certainly more along the lines of okay, I need to learn more about this. But sometimes when you know you have learned something, but it isn't sticking or being applied succesfully in the code editor. It is hard not to get too down on yourself.</p>
+    <li>Be honest, what do you value and praise yourself for more? Innately/already knowing how to solve a problem? Or being able to stick with it, research, troubleshoot, and learn more to debug?</li>
+    <p>If i'm being honest, I would say I praise myself for knowning stuff innately, but I don't like this aspect of myself.</p>
+    <li>Based on your answers to questions above, do you think you have a growth mindset? Why or why not?</li>
+    <li>If you don't currently have a growth mindset, identify what you could do differently to begin fostering one. Or, if you already think you do, what could you to do maximize it?</li>
   </ul>
 </body>
 
