answer the journal prompts for week 7

--- a/austin-journal.html
+++ b/austin-journal.html
@@ -34,6 +34,19 @@
     <li>Based on your answers to questions above, do you think you have a growth mindset? Why or why not?</li>
     <li>If you don't currently have a growth mindset, identify what you could do differently to begin fostering one. Or, if you already think you do, what could you to do maximize it?</li>
   </ul>
+
+  <h3>Week 7 Questions and Answers</h3>
+
+  <ul>
+    <li>What are your goals for this group project? Besides creating a codebase, what do you hope to accomplish? (For example, are you hoping to explore technologies above and beyond what's offered in our curriculum? Practice your project management skills? List anything applicable!)</li>
+      <p>I am interested in applying some fun and unique HTML and CSS to the codebase. But I know my weakness is complex algorithms and looping, so I would like to be CC'd on those topics as we build them out.</p>
+
+    <li>do you anticipate could potentially stand in your (or your teammates') way to feeling accomplished this week? Consider referring back to previous journal responses. For instance, did you identify yourself as someone that occasionally falls prone to imposter syndrome? Or someone that can become unproductively frustrated by bugs and issues if you don't catch yourself? List anything applicable.</li>
+      <p>I do believe that I get overly frustrated by bugs and it makes me lose focus and possibly become a distraction. Maybe that is something I should keep an eye on.</p>
+
+    <li>How could you increase the feeling of accomplishment experienced with your teammates this week? For each potential roadblock you recorded above, list at least one thing you can do to proactively prevent it from negatively effecting your group project experience.</li>
+      <p>I think working through my bugs step by step isn't something that I have done a great job of so far. Also using the debugging tools we have learned in the program are going to be key for me going forward.</p>
+  </ul>
 </body>
 
 </html>
