add week 8questions and answers

--- a/austin-journal.html
+++ b/austin-journal.html
@@ -47,6 +47,20 @@
     <li>How could you increase the feeling of accomplishment experienced with your teammates this week? For each potential roadblock you recorded above, list at least one thing you can do to proactively prevent it from negatively effecting your group project experience.</li>
       <p>I think working through my bugs step by step isn't something that I have done a great job of so far. Also using the debugging tools we have learned in the program are going to be key for me going forward.</p>
   </ul>
+
+  <h3>Week 7 Questions and Answers</h3>
+
+  <ul>What were your most notable non-technical discoveries during this exercise? Whether about yourself, group communication, working with others, or something else?</ul>
+  <p>That being present for as much of a team project is very crucial, I was a part of a good part of it (as much as I could be with power issues) and I still only felt I had a 50-75% understanding of what was going on.</p>
+
+  <ul>What were your greatest strengths? What about your biggest areas for improvement?</ul>
+  <p>My biggest strengths are css, and objects. My biggest weakness is looping.</p>
+
+  <ul>Identify what you can do in the next five weeks to further develop any areas for improvement before the next group project.</ul>
+  <p>I really need extra practice looping, testing, and also, I just don't think like a developer yet. I am nearly fluent at reading javascript at this point, but not at writing logic and functions from scratch.</p>
+
+  <ul>Overall, what would you do differently next time? Is there a lesson to be learned and brought with you to your pairing or next group week experience?</ul>
+  <p>Being more versed on the topic I choose to participate in for team week. I didn't have a passion for the subject, just signed up because I liked some of the people in the group. I didn't feel as invested in the result as I would of liked to.</p>
 </body>
 
 </html>
